external/lib25519-20241004/build/arm64/unified/fe25519nsquareS/1/shared/result-compile-fe25519_nsquare
fe25519_nsquare.S:114:19: error: unexpected token in '.section' directive
.section .note.GNU-stack,"",@progbits
                  ^
